openshift/config/10_sample-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsw-sample-front
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-front
  template:
    metadata:
      labels:
        app: sample-front
    spec:
      containers:
        - name: sample-front
          image: ghcr.io/utrechtuniversity/fsw-openshift-frontend:master
          ports:
            - containerPort: 7050
