openshift/config/12_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: fsw-nginx
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/utrechtuniversity/nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
