openshift/config/04_mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-sample
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-sample
