openshift/config/08_sample-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  ports:
    - port: 9000
      targetPort: 9000
    - port: 7050
      targetPort: 7050
    - port: 5173
      targetPort: 5173
  selector:
    app: sample-app
