openshift/config/11_sample-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-front
  labels:
    app: fsw-sample-app
    app.kubernetes.io/part-of: fsw-sample-app
spec:
  ports:
    - port: 7050
      targetPort: 7050
  selector:
    app: sample-front
